[tool.poetry]
name = "nautobot-data-validation-engine"
version = "2.3.0"
description = "Provides UI to build custom data validation rules for data in Nautobot"
authors = ["Network to Code, LLC <info@networktocode.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nautobot/nautobot-plugin-data-validation-engine"
repository = "https://github.com/nautobot/nautobot-plugin-data-validation-engine"
keywords = ["nautobot", "nautobot-plugin", "data", "validation", "django"]
include = [
    "LICENSE",
    "README.md",
]
packages = [
    { include = "nautobot_data_validation_engine" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# Used for local development
nautobot = ">=2.0.0rc1,<2.0.0rc99"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
django-debug-toolbar = "*"
# we need to pin flake8 because of package dependencies that cause it to downgrade and
# therefore cause issues with linting since older versions do not take .flake8 as config
flake8 = "^3.9.2"
invoke = "*"
ipython = "*"
pydocstyle = "*"
pylint = "*"
pylint-django = "*"
pylint-nautobot = "*"
pytest = "*"
yamllint = "*"
Markdown = "*"
toml = "*"
requests = "^2.31.0"
# Rendering docs to HTML
mkdocs = "1.4.3"
# Material for MkDocs theme
mkdocs-material = "9.1.18"
# Render custom markdown for version added/changed/remove notes
mkdocs-version-annotations = "1.0.0"
# Automatic documentation from sources, for MkDocs
mkdocstrings = "0.22.0"
mkdocstrings-python = "1.3.0"

[tool.poetry.extras]
nautobot = ["nautobot"]

[tool.black]
line-length = 120
target-versions = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django, pylint_nautobot"
ignore=".venv"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    broad-except,
    consider-using-f-string,
    duplicate-code,
    invalid-name,
    line-too-long,
    logging-fstring-interpolation,
    nb-incorrect-base-class,
    nb-string-field-blank-null,
    protected-access,
    raise-missing-from,
    too-few-public-methods,
    too-many-ancestors,
    too-many-branches,
    unused-import,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint-nautobot]
supported_nautobot_versions = [
    "1",
    "2"
]

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development)[^\\.].*"
# D212 is enabled by default in google convention, and complains if we have a docstring like:
# """
# My docstring is on the line after the opening quotes instead of on the same line as them.
# """
# We've discussed and concluded that we consider this to be a valid style choice.
add_ignore = "D212"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
